完成华为秋招题目

--- a/Huawei/华为.md
+++ b/Huawei/华为.md
@@ -30,3 +30,77 @@
 #### 输出样例
 
 975
+
+#### [完整代码](https://github.com/traviszeng/techInterviewCode/blob/master/Huawei/huawei1.cpp)
+
+### 消除重复数字
+
+#### 题目描述
+
+给定一个正整数，给出消除重复数字以后最大的整数。
+
+####  输入描述 
+
+正整数，注意考虑长整形
+
+#### 输出描述
+
+消除重复数字以后的最大整数
+
+#### 输入样例
+
+43223234
+
+#### 输出样例
+
+432
+
+#### [完整代码](https://github.com/traviszeng/techInterviewCode/blob/master/Huawei/huawei2.cpp)
+
+
+### 仿LISP的运算
+
+#### 题目描述
+
+LISP语言唯一的语法就是括号要配对。 
+形如 (OP P1 P2 …)，括号内元素由单个空格分割。 
+
+其中第一个元素OP为操作符，后续元素均为其参数，参数个数取决于操作符类型
+ 
+注意：参数 P1, P2 也有可能是另外一个嵌套的 (OP P1 P2 …) 
+当前OP类型为add/sub/mul/div(全小写)，分别代表整数的加减乘除法。
+
+其中add和mul的参数为两个或以上
+ 
+举例：
+
+输入：(mul 3 -7)输出：-21
+
+输入：(add 1 2) 输出：3
+
+输入：(sub (mul 2 4) (div 9 3)) 输出 ：5
+
+输入：(div 1 0) 输出：error
+
+#### 输入描述
+
+合法c字符串，字符串长度不超过512
+
+#### 输出描述
+
+合法c字符串，字符包括'0'-'9',以及负号或者error
+
+#### 输入样例
+
+(add 1 2 3)
+
+#### 输出样例
+
+6
+
+·
+#### 解题思路
+
+用栈来匹配左右括号，将完整一个表达式放入lispcalculator中计算，然后将表达式替换为计算后的结果，直至没有括号为止。
+
+#### [完整代码](https://github.com/traviszeng/techInterviewCode/blob/master/Huawei/huawei3.cpp)
