--- a/Tencent/腾讯.md
+++ b/Tencent/腾讯.md
@@ -25,7 +25,7 @@
 	
 	jump[i] = min(climb[i-2],climb[i-1]);
 
-[完整代码](https://github.com/traviszeng/techInterviewCode/blob/master/Tencent/tencent1.cpp)
+#### [完整代码](https://github.com/traviszeng/techInterviewCode/blob/master/Tencent/tencent1.cpp)
 
 ## 妞妞的问题
 
@@ -79,7 +79,7 @@
 	3 6
 	4 8
 
-[完整代码](https://github.com/traviszeng/techInterviewCode/blob/master/Tencent/tencent2.cpp)
+#### [完整代码](https://github.com/traviszeng/techInterviewCode/blob/master/Tencent/tencent2.cpp)
 
 ## 小Q的排序
 
@@ -112,5 +112,5 @@
 
 	2
 
-[完整代码](https://github.com/traviszeng/techInterviewCode/blob/master/Tencent/tencent3.cpp)
+#### [完整代码](https://github.com/traviszeng/techInterviewCode/blob/master/Tencent/tencent3.cpp)
 
